# GABRIEL

./: README.md  pyproject.toml
src/gabriel/: api.py
src/gabriel/prompts/: ideation_prompt.jinja2  paraphrase_prompt.jinja2
src/gabriel/tasks/: classify.py  deduplicate.py  discover.py  ideate.py  merge.py  paraphrase.py
src/gabriel/utils/: audio_utils.py  file_utils.py  media_utils.py  modality_utils.py  openai_utils.py  parsing.py
tests/: test_basic.py  test_parallelization_tuning.py  test_timeout_burst.py
