[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-gabriel"
version = "1.0.2"
description = "LLM-based library to measure quantitative attributes on qualitative data"
authors = [
    {name = "Hemanth Asirvatham"},
    {name = "Elliott Mokski"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = [
    "llm",
    "gpt",
    "openai",
    "ai",
    "research",
    "academic",
    "econ",
    "economics",
    "econometrics",
    "machine learning",
    "social sciences",
    "text analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "Jinja2>=3.0.0",
    "tqdm>=4.40.0",
    "aiohttp>=3.7.0",
    "aiolimiter>=1.0.0",
    "httpx>=0.23.0",
    "plotly>=5.0.0",
    "matplotlib>=3.6.0",
    "requests>=2.0.0",
    "scipy>=1.8.0",
    "tiktoken>=0.2.0",
    "pydantic>=1.10.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
analysis = [
    "statsmodels>=0.14.0",
    "tabulate>=0.9.0",
]
notebook = [
    "ipython>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/openai/GABRIEL"
Repository = "https://github.com/openai/GABRIEL"
Documentation = "https://github.com/openai/GABRIEL/blob/main/README.md"
Issues = "https://github.com/openai/GABRIEL/issues"

[project.scripts]
gabriel = "gabriel.cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["gabriel*"]

[tool.setuptools.package-data]
"gabriel.prompts" = ["*.jinja2"]
